<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/progress_background"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/default_time"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <com.previewseekbar.PreviewSeekBarLayout
        android:id="@+id/previewSeekBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- TODO: Enable the following when adding the thumbnails -->
        <!-- set width to @dimen/video_preview_width -->
        <!-- set height to @dimen/video_preview_height -->
        <FrameLayout
            android:id="@+id/previewFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#a00"
                android:contentDescription="@string/preview_image" />

        </FrameLayout>

        <com.previewseekbar.PreviewSeekBar
            android:id="@+id/previewSeekBar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/previewFrameLayout"
            android:max="800"
            android:maxHeight="44dp"
            android:minHeight="44dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp" />

    </com.previewseekbar.PreviewSeekBarLayout>

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/default_time"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <ImageButton
        android:id="@+id/fullscreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000"
        android:contentDescription="@string/fullscreen"
        android:gravity="center"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_fullscreen_off" />

</LinearLayout>